[package]
name = "concurrency"
version = "4.2.0"
description = '''This exist to prove a point

Read more about this over at:   
https://github.com/DeadlySurgeon/concurrency
'''

license = "Apache-2.0"
authors = ["The Surgeon"]
homepage = "https://deadly.surgery"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
